# mcpx-pydantic-ai

./: example.py  mcpx_pydantic_ai.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_mcpx.py
