[project]
name = "mcpx-pydantic-ai"
version = "0.1.0"
description = "Pydantic Agent with mcp.run tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcpx-py",
    "pydantic>=2.10.4",
    "pydantic-ai>=0.0.17",
]

[dependency-groups]
dev = [
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
    "ruff>=0.8.6",
]
